--- a/styles/projects.module.css
+++ b/styles/projects.module.css
@@ -44,6 +44,9 @@
     border-color: var(--secondary-text-color);
     border-width: 3px;
     border-style: solid;
+
+    height: max(240px, min(450px, 40vw));
+    width: max(320px, min(600px, 52vw));
 }
 
 .githubLogoP2 {
