--- a/styles/interests.module.css
+++ b/styles/interests.module.css
@@ -29,3 +29,20 @@
     height: 2px;
     background-color: var(--main-text-color);
 }
+
+.interestThumbnail {
+    border-color: var(--secondary-text-color);
+    border-width: 3px;
+    border-style: solid;
+
+    height: max(240px, min(450px, 40vw));
+    width: max(320px, min(600px, 52vw));
+}
+
+.sectionText {
+    font-size: 20px;
+    font-weight: bold;
+    font-family: Arial, Helvetica, sans-serif;
+    margin-bottom: 0px;
+    color: var(--main-text-color);
+}
