fixed bug causing shrinking circle element to expand when playing transition animation for the first time

--- a/components/headerTab.module.css
+++ b/components/headerTab.module.css
@@ -98,5 +98,5 @@
 
     visibility: hidden;
 
-    transition: all .8s cubic-bezier(.26,.02,.47,.17);
+    transition: top .8s cubic-bezier(.26,.02,.47,.17);
 }
