made content containers padding width reactive to screen width

--- a/components/layout.module.css
+++ b/components/layout.module.css
@@ -69,7 +69,7 @@ CONTAINERS AND MAIN COMPONENTS
 
     margin: 70px 10vw 70px calc(10vw + 17px);
 
-    padding: 20px 40px 20px 40px;
+    padding: 20px 4vw 20px 4vw;
 
     min-height: 79.8vh;
 
